--- a/backend/package.json
+++ b/backend/package.json
@@ -3,15 +3,20 @@
   "version": "1.0.0",
   "description": "It is a project that deals with helping its users,looking for help related to mental health",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon server.js"
+    "dev": "nodemon src/index.js"
   },
   "author": "Adamya Sharma",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.1",
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
