--- a/frontend/mhwFrontend/package.json
+++ b/frontend/mhwFrontend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
