--- a/frontend/mhwFrontend/package.json
+++ b/frontend/mhwFrontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-h5-audio-player": "^3.9.3",
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1"
