--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -7,29 +7,15 @@
       }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
-    ]
-    ,
-    "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
         {
-          "key": "Access-Control-Allow-Origin",
-          "value": "https://mental-health-wallah-mhw.vercel.app"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET,POST,PUT,DELETE,OPTIONS"
-        },
-        {
-          "key": "Access-Control-Allow-Credentials",
-          "value": "true"
-        }
-      ]
-    }
-  ]
+           "src": "/(.*)",
+           "dest": "/",
+            "methods": ["GET","POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+            "headers": {
+               "Access-Control-Allow-Origin": "*",
+               "Access-Control-Allow-Credentials": "true",
+               "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+           }
+       }
+     ]
   }
