--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,14 +2,18 @@
     "version": 2,
     "builds": [
       {
-        "src": "*.js",
+        "src": "src/index.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
         {
            "src": "/(.*)",
-           "dest": "/app.js"
+           "dest": "src/index.js",
+           "methods":["GET","POST","PUT","DELETE","PATCH","OPTIONS"],
+           "headers":{
+            "Access-Control-Allow-Origin":"*"
+           }
        }
      ]
   }
